made world mesher use task manager